# Natural-Language-Processing

./: pyproject.toml
NLP_2026_A2/: NLP_2026_A2.ipynb  NLP_2026_A2_Selem.ipynb  NLP_2026_A2_final.ipynb  pmi.py  problem1.py  requirements.txt
NLP_2026_A2/.ipynb_checkpoints/: NLP_2026_A2-checkpoint.ipynb
NLP_2026_A2/results/: bigrams.txt  bigrams_smoothed.txt  generated_bigrams.txt  trigrams.txt  unigrams.txt
NLP_2026_A4/: A4_MLP.ipynb  main.py
NLP_2026_A4/DepParsing/: README.txt  parser_model.py  parser_transitions.py  run.py
NLP_2026_A4/DepParsing/utils/: parser_utils.py
