[project]
name = "natural-language-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "defaults>=0.3.0",
    "docopt>=0.6.2",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.workspace]
members = [
    "NaturalLanguageProcessing/NLP_2026_A4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm7.2"
